
noinst_LIBRARIES = libcommon.a

libcommon_a_SOURCES = \
	async-resolver.h async-resolver.c \
	config-parser.h config-parser.c \
	compat.h compat.c \
	hash.h hash.c \
	log.h log.c \
	server-mainloop.c server-mainloop.h \
	sock-any.h sock-any.c \
	snmp-engine.h snmp-engine.c \
	usuals.h

libcommon_a_CFLAGS = -I${top_srcdir}/common/ -I${top_srcdir}/bsnmp/ -I${top_srcdir}

