
mibdir = $(datadir)/mib/

mib_DATA = \
    AGENTX-MIB.txt \
    BGP4-MIB.txt \
    BRIDGE-MIB.txt \
    DISMAN-SCHEDULE-MIB.txt \
    DISMAN-SCRIPT-MIB.txt \
     EtherLike-MIB.txt \
    GNOME-SMI.txt \
    HCNUM-TC.txt \
    HOST-RESOURCES-MIB.txt \
    HOST-RESOURCES-TYPES.txt \
    IANA-ADDRESS-FAMILY-NUMBERS-MIB.txt \
    IANAifType-MIB.txt \
    IANA-LANGUAGE-MIB.txt \
    IF-INVERTED-STACK-MIB.txt \
    IF-MIB.txt \
    INET-ADDRESS-MIB.txt \
    IP-FORWARD-MIB.txt \
    IP-MIB.txt \
    IPV6-ICMP-MIB.txt \
    IPV6-MIB.txt \
    IPV6-TC.txt \
    IPV6-TCP-MIB.txt \
    IPV6-UDP-MIB.txt \
    LM-SENSORS-MIB.txt \
    NOTIFICATION-LOG-MIB.txt \
    OSPF-MIB.txt \
    RFC1155-SMI.txt \
    RFC1213-MIB.txt \
    RFC-1215.txt \
    RIPv2-MIB.txt \
    RMON-MIB.txt \
    SMUX-MIB.txt \
    SNMP-COMMUNITY-MIB.txt \
    SNMP-FRAMEWORK-MIB.txt \
    SNMP-MPD-MIB.txt \
    SNMP-NOTIFICATION-MIB.txt \
    SNMP-PROXY-MIB.txt \
    SNMP-TARGET-MIB.txt \
    SNMP-USER-BASED-SM-MIB.txt \
    SNMP-USM-AES-MIB.txt \
    SNMPv2-CONF.txt \
    SNMPv2-MIB.txt \
    SNMPv2-SMI.txt \
    SNMPv2-TC.txt \
    SNMPv2-TM.txt \
    SNMP-VIEW-BASED-ACM-MIB.txt \
    SOURCE-ROUTING-MIB.txt \
    TCP-MIB.txt \
    UDP-MIB.txt

EXTRA_DIST = $(mib_DATA)
